--- a/Maktub/InicioSesion/css/main.css
+++ b/Maktub/InicioSesion/css/main.css
@@ -87,14 +87,10 @@ body {
 .onb-card {
   background: rgba(255, 255, 255, 0.15);
   backdrop-filter: blur(26px);
-  -webkit-backdrop-filter: blur(26px);
-  border-radius: 20px;
-  border: 1px solid rgba(255, 255, 255, 0.3);
-  box-shadow: 
-    0 8px 32px rgba(0, 0, 0, 0.1),
-    inset 0 1px 0 rgba(255, 255, 255, 0.1),
-    inset 0 -1px 0 rgba(255, 255, 255, 0.1),
-    inset 0 0 30px 15px rgba(255, 255, 255, 0.2);
+  border-radius: 3.25rem;
+  border: 1px solid var(--Base-Secondary3, #c1e7fe33);
+  background: rgba(0, 167, 228, 0.10);
+  box-shadow: 0 6px 6.8px 0 rgba(0, 0, 0, 0.25), 0 4px 5.9px 0 rgba(0, 0, 0, 0.28) inset;
   isolation: isolate;
   max-width: 600px;
   padding: var(--space-card);
